--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemCard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ItemPage">
@@ -30,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.078"/>
+        app:layout_constraintVertical_bias="0.078" />
 
     <TextView
         android:id="@+id/itemUrl"
@@ -91,50 +92,65 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/loctitle">
+
         <TableRow>
+
             <TextView
-                android:text="loc1"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc1" />
+
             <TextView
-                android:text="dist1"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist1" />
         </TableRow>
+
         <TableRow>
+
             <TextView
-                android:text="loc2"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc2" />
+
             <TextView
-                android:text="dist2"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist2" />
         </TableRow>
+
         <TableRow>
+
             <TextView
-                android:text="loc3"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc3" />
+
             <TextView
-                android:text="dist3"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist3" />
         </TableRow>
+
         <TableRow>
+
             <TextView
-                android:text="loc4"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc4" />
+
             <TextView
-                android:text="dist4"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist4" />
         </TableRow>
+
         <TableRow>
+
             <TextView
-                android:text="loc5"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc5" />
+
             <TextView
-                android:text="dist5"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist5" />
         </TableRow>
     </TableLayout>
 
