--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -37,51 +37,38 @@
         android:id="@+id/itemUrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="72dp"
         android:text="Recycling Information:"
-        app:layout_constraintBottom_toTopOf="@id/link"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name" />
-
-    <TextView
-        android:id="@+id/link"
-        android:layout_width="383dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="544dp"
-        android:autoLink="all"
-        android:clickable="true"
-        android:text="https://earth911.com/recycling-guide/how-to-recycle-medical-sharps/"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.053" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="116dp"
         android:layout_height="164dp"
-        android:layout_marginTop="80dp"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toStartOf="@id/locations"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/link" />
+        app:layout_constraintTop_toBottomOf="@+id/itemUrl" />
 
     <TextView
         android:id="@+id/loctitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="28dp"
         android:text="Recycling Centers that will accept this:"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/locations"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/link" />
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintVertical_bias="0.857" />
 
     <TableLayout
         android:id="@+id/locations"
@@ -90,8 +77,10 @@
         android:stretchColumns="1"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toBottomOf="@id/loctitle">
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintVertical_bias="1.0">
 
         <TableRow>
 
@@ -100,63 +89,68 @@
                 android:layout_width="107dp"
                 android:padding="3dip"
                 android:text="loc1" />
+
             <TextView
                 android:id="@+id/distance1"
-                android:text="dist1"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist1" />
         </TableRow>
 
         <TableRow>
 
             <TextView
                 android:id="@+id/location2"
-                android:text="loc2"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc2" />
+
             <TextView
                 android:id="@+id/distance2"
-                android:text="dist2"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist2" />
         </TableRow>
 
         <TableRow>
 
             <TextView
                 android:id="@+id/location3"
-                android:text="loc3"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc3" />
+
             <TextView
                 android:id="@+id/distance3"
-                android:text="dist3"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist3" />
         </TableRow>
 
         <TableRow>
 
             <TextView
                 android:id="@+id/location4"
-                android:text="loc4"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc4" />
+
             <TextView
                 android:id="@+id/distance4"
-                android:text="dist4"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist4" />
         </TableRow>
 
         <TableRow>
 
             <TextView
                 android:id="@+id/location5"
-                android:text="loc5"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="loc5" />
+
             <TextView
                 android:id="@+id/distance5"
-                android:text="dist5"
                 android:gravity="right"
-                android:padding="3dip"/>
+                android:padding="3dip"
+                android:text="dist5" />
         </TableRow>
     </TableLayout>
 
