--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -44,7 +44,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.053" />
+        app:layout_constraintVertical_bias="0.004" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -54,7 +54,8 @@
         app:layout_constraintEnd_toStartOf="@id/locations"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemUrl" />
+        app:layout_constraintTop_toBottomOf="@+id/itemUrl"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/loctitle"
@@ -65,22 +66,22 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/locations"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        app:layout_constraintVertical_bias="0.857" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemUrl"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TableLayout
         android:id="@+id/locations"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
+        android:layout_width="168dp"
+        android:layout_height="142dp"
         android:stretchColumns="1"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/itemUrl"
+        app:layout_constraintVertical_bias="0.994">
 
         <TableRow>
 
