--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Issues" />
+                android:text="... issues" />
 
             <TextView
                 android:id="@+id/mptest"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Tests" />
+                android:text="... tests" />
 
             <TextView
                 android:id="@+id/name1"
@@ -155,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Issues" />
+                android:text="... issues" />
 
             <TextView
                 android:id="@+id/mptest1"
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Tests" />
+                android:text="... tests" />
 
             <TextView
                 android:id="@+id/name2"
@@ -215,7 +215,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Issues" />
+                android:text="... issues" />
 
             <TextView
                 android:id="@+id/mptest2"
@@ -223,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Tests" />
+                android:text="... tests" />
 
             <TextView
                 android:id="@+id/name3"
@@ -275,7 +275,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Issues" />
+                android:text="... issues" />
 
             <TextView
                 android:id="@+id/mptest3"
@@ -283,7 +283,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Tests" />
+                android:text="... tests" />
 
             <TextView
                 android:id="@+id/name4"
@@ -336,7 +336,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Issues" />
+                android:text="... issues" />
 
             <TextView
                 android:id="@+id/mptest4"
@@ -344,7 +344,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... Tests" />
+                android:text="... tests" />
 
             <TextView
                 android:id="@+id/totalCommits"
