Fixed About page

--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -377,9 +377,9 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Data source: \n
-                 No data for Phase 1\n
+                 Earth911 and CoolClimate\n
                  Data Source Links:\n
-                 No data for Phase 1\n" />
+                 Links are API requests\n" />
 
             <TextView
                 android:id="@+id/tools"
@@ -391,6 +391,7 @@
                     Android Studio\n
                     Used as the basic of our app creation\n
                     Google Maps API\n
+                    Cool CLimate\n
                     Used to show maps of local recycling\n
                     Github API\n
                     Main collaborative tool\n" />
