--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -344,7 +344,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="... tests" />
+                android:text="... tests\n" />
 
             <TextView
                 android:id="@+id/totalCommits"
